# gitalky

./: CLAUDE.md  Cargo.toml  IMMEDIATE_ACTIONS_SUMMARY.md  README.md  TESTING_PHASE3.md
.claude/: settings.local.json
.claude/agents/: grumpy-staff-engineer.md
benches/: error_translation.rs  git_operations.rs  llm_translation.rs
codev/plans/: 0002-natural-language-git-tui.md  0003-technical-debt-cleanup.md
codev/protocols/spider-solo/templates/: spec.md
codev/reviews/: 0003-tech-debt-cleanup.md  immediate-actions-complete.md  phase6-self-review.md  security-hardening-2025-10-09.md  security-hardening-final-2025-10-09.md  spec-plan-alignment-review.md
codev/specs/: 0001-initial-project-setup.md  0002-natural-language-git-tui.md  0003-technical-debt-cleanup.md
docs/: architecture.md  benchmarking.md  error_handling.md  testing_strategy.md
examples/: inspect_context.rs  test_llm.rs
src/: error.rs  lib.rs  main.rs
src/audit/: logger.rs  mod.rs
src/config/: first_run.rs  mod.rs  settings.rs
src/error_translation/: mod.rs  translator.rs
src/git/: executor.rs  mod.rs  parser.rs  repository.rs  version.rs
src/llm/: anthropic.rs  client.rs  context.rs  mod.rs  translator.rs
src/security/: mod.rs  validator.rs
src/ui/: app.rs  command_preview.rs  help.rs  input.rs  mod.rs  output.rs  repo_panel.rs
tests/: cross_module_integration.rs  edge_cases.rs  error_conversions.rs  integration_test.rs  security_allowlist_sync.rs  security_integration.rs
tests/helpers/: mod.rs
