[package]
name = "gitalky"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
# Phase 1
thiserror = "1.0"

# Phase 2
ratatui = "0.28"
crossterm = "0.28"

# Phase 3
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Phase 5
chrono = "0.4"

[dev-dependencies]
tempfile = "3.0"  # For test git repositories
